# SESASR_labs

./: README.md
lab_1/: README.md
lab_1/ros2_ws/src/: README.md
lab_1/ros2_ws/src/lab01_pkg/: package.xml  setup.cfg  setup.py
lab_1/ros2_ws/src/lab01_pkg/lab01_pkg/: controller.py  controller_node.py  controller_reset.py  localization.py  localization_node.py  localization_reset.py  reset_node.py
lab_2/: README.md  READMEmd
lab_2/ros2_ws/src/lab02_pkg/: package.xml  setup.cfg  setup.py
lab_2/ros2_ws/src/lab02_pkg/config/: bump_and_go_params.yaml
lab_2/ros2_ws/src/lab02_pkg/lab02_pkg/: bump_and_go.py
lab_2/ros2_ws/src/lab02_pkg/launch/: lab02.launch.py
lab_2/ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt
lab_2/ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: hard_maze.world
lab_2/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/: CMakeLists.txt  package.xml
lab_2/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/config/: turtlebot3_waffle_pi_bridge.yaml
lab_2/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/launch/: lab02.launch.py  robot_state_publisher.launch.py
lab_2/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/urdf/: turtlebot3_burger.urdf
lab_2/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/worlds/: empty_world.world  hard_maze.world
lab_2/ros2_ws/src/turtlebot3_simulations/turtlebot3_simulations/: package.xml
lab_3/sesasr_labs_group01/: README.md
lab_3/sesasr_labs_group01/src/lab03_pkg/: package.xml  setup.cfg  setup.py
lab_3/sesasr_labs_group01/src/lab03_pkg/lab03_pkg/: bump_go_real.py
lab_3/sesasr_labs_group01/src/lab03_pkg/launch/: lab03.launch.py
lab_3/sesasr_labs_group01/src/rosbag2_2025_10_28-14_35_22/: metadata.yaml
lab_4/ros2_ws/install/: local_setup.sh  setup.sh
lab_4/ros2_ws/install/lab04_pkg/lib/lab04_pkg/: task0_landmark  task0_velocity  task1_node  task2_node
lab_4/ros2_ws/install/lab04_pkg/share/lab04_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
lab_4/ros2_ws/log/: latest_build
lab_4/ros2_ws/src/04_Metrics from rosbag/: compute_metrics.ipynb  rosbag2_reader_py.py
lab_4/ros2_ws/src/bags/rosbag2_2025_11_18-14_23_09/: metadata.yaml
lab_4/ros2_ws/src/bags/rosbag2_2025_11_18-14_35_10/: metadata.yaml
lab_4/ros2_ws/src/lab4_pkg/: package.xml  setup.cfg  setup.py
lab_4/ros2_ws/src/lab4_pkg/bags/our bags/: metadata.yaml
lab_4/ros2_ws/src/lab4_pkg/bags/professor's bags/: metadata.yaml
lab_4/ros2_ws/src/lab4_pkg/config/: landmarks.yaml
lab_4/ros2_ws/src/lab4_pkg/lab04_pkg/: task2_def.py  velocity_model.py
lab_4/ros2_ws/src/lab4_pkg/lab4_pkg/: compute_jacobians.py  ekf_node.py  ekf_node_task2.py  landmark_model.py  odometry_motion_model.py  task0_landmark_sampler.py  task0_motion_sampler.py
lab_4/ros2_ws/src/probabilistic-robotics-python-examples/: README.md  requirements.txt  setup.py
lab_4/ros2_ws/src/probabilistic-robotics-python-examples/Discrete_Filters/: pf.py  pf_robot_gridmap_landmarks.py  pf_robot_gridmap_laser.py  pf_robot_landmarks.py  plot_utils.py  probabilistic_models.py  utils.py
lab_4/ros2_ws/src/probabilistic-robotics-python-examples/Gaussian_Filters/: ekf.py  ekf_robot_landmarks.py  jacobians_sympy.ipynb  plot_utils.py  probabilistic_models.py  ukf.py  ukf_robot_landmarks.py  utils.py
lab_4/ros2_ws/src/probabilistic-robotics-python-examples/Mapping/: MAP_occupancy_grid_mapping.py  gridmap_utils.py  hill_climbing.py  occupancy_grid_mapping.py  robot_poses.npy
lab_4/ros2_ws/src/probabilistic-robotics-python-examples/Motion_Models/: velocity_motion_model.py
lab_4/ros2_ws/src/probabilistic-robotics-python-examples/SLAM/: robot_sim.py  slam_ekf.py  slam_sim.py
lab_4/ros2_ws/src/probabilistic-robotics-python-examples/Sensors_Models/: beam_range_model.py  generate_beam_data.py  landmark_model.py  likelihood_fields.py  ray_casting.py  utils.py
lab_4/ros2_ws/src/turtlebot3_perception/: README.md
lab_4/ros2_ws/src/turtlebot3_perception/landmark_msgs/: CMakeLists.txt  package.xml
lab_4/ros2_ws/src/turtlebot3_perception/landmark_msgs/msg/: Landmark.msg
lab_4/ros2_ws/src/turtlebot3_perception/turtlebot3_perception/: package.xml  setup.cfg  setup.py
lab_4/ros2_ws/src/turtlebot3_perception/turtlebot3_perception/config/: apriltag.yaml  default.rviz  landmarks.yaml  oakd_config.yaml
lab_4/ros2_ws/src/turtlebot3_perception/turtlebot3_perception/debian/udev/: install_udev
lab_4/ros2_ws/src/turtlebot3_perception/turtlebot3_perception/launch/: apriltag.launch.py  camera.launch.py  rs_launch_composable.launch.py
lab_4/ros2_ws/src/turtlebot3_perception/turtlebot3_perception/turtlebot3_perception/: detection2landmark.py  landmark_simulator.py  laserscan2lines.py  laserscan2lines_node.py
lab_4/ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/env-hooks/: turtlebot3_gazebo.dsv.in
lab_4/ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/launch/: project.launch.py
lab_5/ros2_ws/src/lab5_pkg/: package.xml  setup.cfg  setup.py
lab_5/ros2_ws/src/lab5_pkg/lab5_pkg/: adwa_node.py  adwa_robot_node.py  controller_main.py  dwa.py  dwa_node.py  plot_utils.py  utils.py
lab_5/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/: CMakeLists.txt
lab_5/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/config/: turtlebot3_burger_bridge.yaml
lab_5/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/launch/: lab04.launch.py
lab_5/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/models/turtlebot3_burger/: model.config
lab_5/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/src/: trajectory_plugin.cpp
lab_5/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/urdf/: turtlebot3_waffle.urdf
lab_5/ros2_ws/src/turtlebot3_simulations/turtlebot3_ignition/worlds/: empty_world.world  hard_maze.world
lab_7/ros2_ws/src/lab07_pkg/: package.xml  setup.cfg  setup.py
lab_7/ros2_ws/src/lab07_pkg/lab07_pkg/: adwa_node.py  adwa_robot_node.py  controller_main.py  dwa.py  dwa_analysis_node.py  dwa_node.py  plot_utils.py  rosbag2_reader_py.py  utils.py
(+35 files in other folders)
