<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab02_pkg</name>
  <version>0.0.0</version>
  <description>Lab02 Bump and Go Exercise Package</description>
  <maintainer email="s355447@studenti.polito.it">yousef</maintainer>
  <maintainer email="s352186@studenti.polito.it">giorgia</maintainer>
  <maintainer email="s353515@studenti.polito.it">Yijing</maintainer>
  <maintainer email="s355177@studenti.polito.it">Adnan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>