<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab4_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yousef_hesham.yh112@icloud.com">yousef</maintainer>
  <license>TODO: License declaration</license>

 <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sympy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>landmark_msgs</exec_depend>
  <exec_depend>python3-tf-transformations</exec_depend>
  <exec_depend>python-angles</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend> <exec_depend>landmark_msgs</exec_depend>
  <exec_depend>python3-tf-transformations</exec_depend>
  <exec_depend>python-angles</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
