<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_perception</name>
  <version>0.0.0</version>
  <description>Enable perception on Turtlebot3 through RealSense D435 and Oak D PRO</description>
  <maintainer email="marco.ambrosio@polito.it">Marco Ambrosio</maintainer>
  <license>Apache-2.0</license>

  <depend>apriltag_ros</depend>
  <depend>depthai-ros</depend>
  <depend>geometry_msgs</depend>
  <depend>landmark_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>perception</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-numpy</depend>
  <depend>python3-sklearn</depend>
  <depend>python3-yaml</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>realsense2_camera</depend>
  <depend>tf_transformations</depend>
  <depend>tf2_py</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
